@@ -24,6 +24,7 @@ Bug Fixes::
 * draw border on heading (section title or discrete heading) if it is advanced to next page (#2322)
 * don't force justify first line of abstract if it ends with a hard break
 * don't include children of section with empty title in TOC
+* don't include children of section with empty title in outline
 
 == 2.3.0 (2022-08-16) - @mojavelinux
 
